plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'arguewise'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.4'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.12.5'
	implementation 'org.json:json:20210307'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
	implementation 'javax.transaction:jta:1.1'
	implementation 'org.springframework.kafka:spring-kafka:3.0.4'
	implementation 'com.squareup.okhttp3:okhttp:4.9.3'
	implementation 'software.amazon.awssdk:secretsmanager:2.20.109'
	implementation 'javax.annotation:javax.annotation-api:1.3.2'

	testImplementation 'org.projectlombok:lombok:1.18.22'
    compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.github.javafaker:javafaker:1.0.2'
	testImplementation 'com.h2database:h2:1.4.200'

}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

}
